# models/models.go
@@ -1,0 +1,8 @@
+package models
+
+type ColumnsStruct struct {
+	ColumnName string
+	DataType   string
+	IsNullable string
+	PrimaryKey bool
+}
